--- a/quicksilver/src/pages/StakePage.css
+++ b/quicksilver/src/pages/StakePage.css
@@ -2,7 +2,6 @@
     background: #1A1A1A;
     height: calc(100vh - 76px);
     color: #fff;
-    z-index:2;
 }
 
 .stepper {
